--- a/product-1.html
+++ b/product-1.html
@@ -18,6 +18,9 @@
 
     <section class="product">
       <div>
+        <img src="img/あんぱん.jpg" width="400" height="400" alt="あんぱん">
+      </div>
+      <div>
         <h2>あんぱん</h2>
         <p>
           贅沢な味わい、ほんのり甘くてしっとりとした食感のあんぱん。心を満たす一口を、あなたにお届けします。日常のひとときに、思わず微笑みたくなるあんぱんをお楽しみください。
@@ -25,9 +28,9 @@
         <p>119円(税込)</p>
         <button>購入する</button>
       </div>
-      <div>
+      <!-- <div>
         <img src="img/あんぱん.jpg" width="400" height="400" alt="あんぱん">
-      </div>
+      </div> -->
     </section>
 
     <footer>
