--- a/product-2.html
+++ b/product-2.html
@@ -18,6 +18,9 @@
 
     <section class="product">
       <div>
+        <img src="img/メロンパン.jpg" width="400" height="400" alt="あんぱん">
+      </div>
+      <div>
         <h2>メロンパン</h2>
         <p>
           外はサクッ、中はふんわり。メロンの香りが広がる、贅沢なメロンパン。まるで一つの宝石箱を開けるような気分にさせてくれる、まさに魅惑のスイーツ。口に入れば、甘い幸せが広がります。ぜひ、一度味わってみてください。
@@ -25,9 +28,9 @@
         <p>158円(税込)</p>
         <button>購入する</button>
       </div>
-      <div>
+      <!-- <div>
         <img src="img/メロンパン.jpg" width="400" height="400" alt="あんぱん">
-      </div>
+      </div> -->
     </section>
 
     <footer>
