--- a/product-3.html
+++ b/product-3.html
@@ -18,6 +18,9 @@
 
     <section class="product">
       <div>
+        <img src="img/カレーパン.jpg" width="400" height="400" alt="カレーパン">
+      </div>
+      <div>
         <h2>カレーパン</h2>
         <p>
           熱々の魅力、カレーパン。パリっとした食感の外側と、とろりとしたカレーが口いっぱいに広がる感動の一品。スパイスの香りと旨みが調和した、一度食べたら忘れられない味わい。毎日の食事やおやつの一時を特別なものにしてくれる、心と腹を満たす逸品です。どうぞ、最高のカレーパン体験をお楽しみください！
@@ -25,9 +28,9 @@
         <p>122円(税込)</p>
         <button>購入する</button>
       </div>
-      <div>
+      <!-- <div>
         <img src="img/カレーパン.jpg" width="400" height="400" alt="カレーパン">
-      </div>
+      </div> -->
     </section>
 
     <footer>
