--- a/product-4.html
+++ b/product-4.html
@@ -18,6 +18,9 @@
 
     <section class="product">
       <div>
+        <img src="img/ツイストドーナツ.jpg" width="400" height="400" alt="あんぱん">
+      </div>
+      <div>
         <h2>ツイストドーナツ</h2>
         <p>
           ねじれた幸福、ツイストドーナツ。まるで夢のようなふんわり食感と、甘さと塩気の絶妙なバランス。一口噛んだ瞬間、口の中に広がる幸せな味わいは、心を癒し、笑顔を運んでくれます。朝食やティータイムのお供にぴったりの、特別なご褒美スイーツ。今日も一日、心と胃袋を喜ばせるために、ツイストドーナツをお楽しみください！
@@ -25,9 +28,9 @@
         <p>138円(税込)</p>
         <button>購入する</button>
       </div>
-      <div>
+      <!-- <div>
         <img src="img/ツイストドーナツ.jpg" width="400" height="400" alt="あんぱん">
-      </div>
+      </div> -->
     </section>
 
     <footer>
