--- a/product-5.html
+++ b/product-5.html
@@ -18,6 +18,9 @@
 
     <section class="product">
       <div>
+        <img src="img/ジャム.jpg" width="400" height="400" alt="ピーナツバターと苺ジャムセット">
+      </div>
+      <div>
         <h2>スプレッドセット</h2>
         <p>
           絶妙なハーモニー、ピーナツバターといちごジャムのセット。クリーミーなピーナツバターと、甘酸っぱいいちごジャムの完璧な調和が、贅沢な一口を演出します。朝食やおやつの時間が、より特別で幸せなひとときとなること間違いありません。健康的で栄養価の高いピーナツバターと、フレッシュないちごジャムのデュオは、美味しさと満足感を一緒に届けます。心満たされる特別なセット商品、ぜひお試しください！
@@ -25,9 +28,9 @@
         <p>1500円(税込)</p>
         <button>購入する</button>
       </div>
-      <div>
+      <!-- <div>
         <img src="img/ジャム.jpg" width="400" height="400" alt="ピーナツバターと苺ジャムセット">
-      </div>
+      </div> -->
     </section>
 
     <footer>
